--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Small PWA game to guess pattern locks",
   "main": "scripts/app.js",
   "scripts": {
-    "build": "./node_modules/webpack/bin/webpack.js"
+    "build": "./node_modules/webpack/bin/webpack.js --optimize-minimize"
   },
   "repository": {
     "type": "git",
