--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^4.5.0",
+    "null-loader": "^0.1.1",
     "raw-loader": "^0.5.1",
     "sass-loader": "^5.0.1",
     "style-loader": "^0.13.1",
