Let's go for MIT license

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "https://github.com/maxwellito/breaklock.git"
   },
   "author": "maxwellito",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/maxwellito/breaklock/issues"
   },
