--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,21 @@
       "src": "./assets/icons/icon-256x256.png",
       "sizes": "256x256",
       "type": "image/png"
+    }, {
+      "src": "./assets/icons/ios-180x180.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "maskable"
+    }, {
+      "src": "./assets/icons/ios-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    }, {
+      "src": "./assets/icons/ios-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png",
+      "purpose": "maskable"
     }],
   "start_url": "./",
   "display": "standalone",
