--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
   },
   "homepage": "https://github.com/maxwellito/breaklock",
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "babel-loader": "^8.1.0",
     "css-loader": "^0.28.0",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "mini-css-extract-plugin": "^0.10.0",
     "node-sass": "^4.5.2",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
-    "webpack": "^2.3.3"
+    "webpack": "^4.44.1"
+  },
+  "dependencies": {
+    "yaml": "^1.10.0"
   }
 }
