--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Small PWA game to guess pattern locks",
   "main": "scripts/app.js",
   "scripts": {
-    "build": "./node_modules/webpack/bin/webpack.js --optimize-minimize"
+    "deploy": "gh-pages -d public",
+    "build": "node src/build/build.mjs"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "gh-pages": "^3.1.0",
     "mini-css-extract-plugin": "^0.10.0",
     "node-sass": "^4.5.2",
     "raw-loader": "^0.5.1",
