--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,13 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: gh-pages
+        path: www
     - name: Update gh-pages branch
       run: |
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
-        cp -rf public/* .
-        rm -rf public package-lock.json node_modules
+        cp -rf public/* www
+        cd www
         git add -A
         git commit -m 'Autobuild'
-        git push https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git gh-pages
+        git push
